--- a/Stars/app/src/main/res/values/styles.xml
+++ b/Stars/app/src/main/res/values/styles.xml
@@ -13,4 +13,13 @@
         <item name="android:minHeight">15dp</item>
     </style>
 
+    <style name="Custom_rating_bar_extended" parent="android:Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/custom_star_extended</item>
+        <item name="android:indeterminateDrawable">@drawable/custom_star_extended</item>
+        <item name="android:minHeight">16dp</item>
+        <item name="android:maxHeight">45dp</item>
+        <item name="android:isIndicator">true</item>
+        <item name="android:thumb">@null</item>
+    </style>
+
 </resources>
